# ai-ad-video-automation

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  db.py  main.py  models.py  schemas.py
app/api/: automation.py  copywriting.py  tasks.py
app/prompts/: ad_copy_prompt.txt
app/services/: automation_service.py  copy_service.py  import_service.py  task_state.py
app/utils/: logging.py
dashboard/: Home.py
docs/: project_plan.md
mock_platform/: __init__.py  main.py
mock_platform/templates/: create_task.html  login.html  status.html  success.html
sample_data/: sample_tasks.csv
tests/: test_automation_service.py  test_copy_schema.py  test_copy_service.py  test_import_service.py  test_read_routes.py  test_task_state.py
