[project]
name = "ai-ad-video-automation"
version = "0.1.0"
description = "MVP for batch AI ad copy generation and mock video-platform automation."
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "langchain-core",
    "langchain-openai",
    "playwright",
    "requests",
    "sqlmodel",
    "streamlit",
    "uvicorn",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
include = ["app*", "mock_platform*"]
exclude = ["artifacts*", "dashboard*", "docs*", "sample_data*", "tests*"]

[tool.setuptools.package-data]
mock_platform = ["templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-p no:cacheprovider"
